--- a/html/proyecto.html
+++ b/html/proyecto.html
@@ -48,13 +48,13 @@
         </h2>
         <p class="home-description">
           Coinbase es el lugar más sencillo para comprar y vender criptomonedas.
-          Regístrate y comienza hoy mismo..
+          Regístrate y comienza hoy mismo.
         </p>
         <div class="lead-magnet row align-items-center">
-          <div class="col">
+          <div class="col input-col">
             <input
               type="text"
-              class="form-control"
+              class="form-control input-text"
               name=""
               id=""
               placeholder="Correo Electrónico"
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="home-img">
+      <div class="home-img d-none d-md-block">
         <img src="../assets/imagenes/wallet2.png" alt="" />
       </div>
     </section>
@@ -120,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="image">
+        <div class="image d-none d-md-block">
           <img src="../assets/imagenes/chart.PNG" alt="" />
         </div>
       </div>
@@ -153,51 +153,100 @@
           <i class="bi bi-eye-fill"></i>
           <div class="description">
             <h4 class="title">Almacenamiento seguro</h4>
-            <p class="text">La gran mayoría de activos digitales se guardan en un almacenamiento seguro offline.</p>
+            <p class="text">
+              La gran mayoría de activos digitales se guardan en un
+              almacenamiento seguro offline.
+            </p>
           </div>
-          <p class="cta">Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos</p>
+          <p class="cta">
+            Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos
+          </p>
         </div>
 
         <div class="benefit col-md">
           <i class="bi bi-envelope-fill"></i>
           <div class="description">
             <h4 class="title">Almacenamiento seguro</h4>
-            <p class="text">La gran mayoría de activos digitales se guardan en un almacenamiento seguro offline.</p>
+            <p class="text">
+              La gran mayoría de activos digitales se guardan en un
+              almacenamiento seguro offline.
+            </p>
           </div>
-          <p class="cta">Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos</p>
+          <p class="cta">
+            Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos
+          </p>
         </div>
 
         <div class="benefit col-md">
           <i class="bi bi-shield-shaded"></i>
           <div class="description">
             <h4 class="title">Almacenamiento seguro</h4>
-            <p class="text">La gran mayoría de activos digitales se guardan en un almacenamiento seguro offline.</p>
+            <p class="text">
+              La gran mayoría de activos digitales se guardan en un
+              almacenamiento seguro offline.
+            </p>
           </div>
-          <p class="cta">Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos</p>
+          <p class="cta">
+            Entérate de cómo Coinbase mantiene tus fondos seguros y protegidos
+          </p>
         </div>
-
       </div>
     </section>
 
     <section class="sec-kpis row">
-        <div class="kpi col-md">
-          <span class="number">$547B</span>
-          <span class="description">Quarter volume traded</span>
-        </div>
+      <div class="kpi col-md">
+        <span class="number">$547B</span>
+        <span class="description">Quarter volume traded</span>
+      </div>
 
-        <div class="kpi col-md">
-          <span class="number">100+</span>
-          <span class="description">Countries supported</span>
-        </div>
+      <div class="kpi col-md">
+        <span class="number">100+</span>
+        <span class="description">Countries supported</span>
+      </div>
 
-        <div class="kpi col-md">
-          <span class="number">89+</span>
-          <span class="description">Verified users</span>
-        </div>
+      <div class="kpi col-md">
+        <span class="number">89+</span>
+        <span class="description">Verified users</span>
+      </div>
     </section>
 
-    <section class="section-orboarding"></section>
-    <section class="sec-footer-cta"></section>
+    <section class="sec-orboarding">
+      <div class="intro">
+        <h3>Empieza en tan solo un minuto</h3>
+        <p>
+          Coinbase admite una gran variedad de las monedas digitales más
+          populares.
+        </p>
+      </div>
+        <div class="steps">
+          <div class="icon-desc">
+            <i class="bi bi-person-plus-fill"></i>
+            <h4 class="title">Crea una cuenta</h4>
+          </div>
+          <div class="step-separator">
+
+          </div>
+          <div class="icon-desc">
+            <i class="bi bi-bank"></i>
+            <h4 class="title">Vincula tu cuenta bancaria</h4>
+          </div>
+          <div class="step-separator">
+
+          </div>
+          <div class="icon-desc">
+            <i class="bi bi-coin"></i>
+            <h4 class="title">Comienza a comprar y vender </h4>
+          </div>
+        </div>
+      
+    </section>
+    <section class="sec-footer-cta">
+      <div class="footer-cta">
+        <h4 class="cta-title">Gana hasta 28 US$ gratis en criptomoneda</h4>
+        <p class="cta-description">Conoce cómo funcionan las distintas criptomonedas y pruébalas.</p>
+        <button class="btn-main">Empezar a ganar</button>
+      </div>
+    </section>
 
     <!-- <div class="container"> -->
     <!-- <ul class="main-menu">
